fixed overflow issue from navbar

--- a/assets/style/base.css
+++ b/assets/style/base.css
@@ -43,6 +43,7 @@
 body {
   background-color: var(--color-bg);
   color: var(--color-fg);
+  overflow-x: hidden; /* Hvis noget af mit indhold ikke vises, kan dette være synderen! (Quick-fix for hide-on-scroll class navbar)*/
 }
 
 /*FONTS AND CLASSES*/
